# OneCT-Desktop

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  OneCtDesktop.pro  README.md  main.cpp
src/: ApiClient.cpp  ApiClient.h  LoginWindow.cpp  LoginWindow.h  MainWindow.cpp  MainWindow.h  PostWidget.cpp  PostWidget.h  SettingsDialog.cpp  SettingsDialog.h  main.cpp
